# seal

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  build.bat  doxide.yml  mkdocs.yml  test.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  technical_task.yml
.github/workflows/: build.yml  sonar.yml  test.yml
cmake/: x64-windows-release-msvc143.cmake  x64-windows-static-release-msvc143.cmake
docs/: main.html
extensions/browser/: background.js  content.js  manifest.json
extensions/browser/firefox/: manifest.json
extensions/seal-browser/: background.js  content.js  manifest.json
extensions/seal-browser/firefox/: manifest.json
host/browser/: BridgePipe.cpp  BridgePipe.hpp  ExitLog.cpp  ExitLog.hpp  HandleVerification.cpp  HandleVerification.hpp  LaunchOrigin.cpp  LaunchOrigin.hpp  MessageFraming.cpp  MessageFraming.hpp  NtApi.hpp  main.cpp
host/seal-browser/: CMakeLists.txt  main.cpp
host/seal-browser-host/: CMakeLists.txt  main.cpp
internal/tess/: ocr.py  test_ocr.py
overrides/: main.html
qml/: AccountChip.qml  AccountDialog.qml  AccountRow.qml  AccountsGrid.qml  AccountsTable.qml  AccountsToolbar.qml  ActionBar.qml  Ambient.qml  BridgeSettings.qml  CliPanel.qml  ConfirmDialog.qml  DialogBlobs.qml  HeaderBar.qml  LoadingOverlay.qml  Main.qml  PasswordDialog.qml  RekeyDialog.qml  RippleEffect.qml  SearchBar.qml  StatusFooter.qml  SvgIcon.qml  Theme.qml  TintedButton.qml
scripts/: _clean_docs.py  _promote_subgroups.py
src/: AppViewModel.cpp  AppViewModel.hpp  AsyncRunner.cpp  AsyncRunner.hpp  AutoLockController.cpp  AutoLockController.hpp  AutoLockPolicy.hpp  AutoStagePolicy.hpp  Backend.cpp  Backend.h  Backend.hpp  BrandIconResolver.cpp  BrandIconResolver.hpp  BridgeMessage.cpp  BridgeMessage.hpp  BridgeViewModel.cpp  BridgeViewModel.hpp  BrowserBridge.cpp  BrowserBridge.hpp  BrowserBridgeProbe.cpp  BrowserBridgeProbe.hpp  CameraSelector.cpp  CameraSelector.h  CameraSelector.hpp  CancellationToken.hpp  CliDispatch.cpp  CliDispatch.hpp  CliHandler.cpp  CliHandler.hpp  CliModes.cpp  CliModes.hpp  CliPanelViewModel.cpp  CliPanelViewModel.hpp  Clipboard.cpp  Clipboard.h  Clipboard.hpp  Console.cpp  Console.h  Console.hpp  ConsoleStyle.cpp  (+81 more)
tests/: test_autolock_policy.cpp  test_autostage_policy.cpp  test_brand_icon_resolver.cpp  test_bridge_fuzz.cpp  test_bridge_security.cpp  test_cancellation_token.cpp  test_credential_csv.cpp  test_credential_session.cpp  test_credential_workspace.cpp  test_crypto.cpp  test_diagnostics.cpp  test_directory_crypto.cpp  test_file_operations.cpp  test_fusion_decider.cpp  test_helpers.h  test_helpers.hpp  test_integration.cpp  test_process_pin.cpp  test_secure_string.cpp  test_signer_family.cpp  test_ui_secret_boundaries.cpp  test_url_binding.cpp  test_utils.cpp  test_vault_rekey.cpp  test_vault_roundtrip.cpp  test_win32_style_probe.cpp
tests/fixtures/: chrome_basic.csv  chrome_quoted.csv
